[package]
name = "bukubrow"
version = "4.0.1"
authors = ["Sam A. Horvath-Hunt"]
edition = "2018"

[[bin]]
name = "bukubrow"

[dependencies]
byteorder = "1.3"
clap = "2.33"
dirs = "1.0"
rusqlite = { version = "0.17", features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
webbrowser = "0.5"
