[package]
name = "bukubrow"
version = "5.1.0"
authors = ["Sam A. Horvath-Hunt"]
edition = "2018"

[[bin]]
name = "bukubrow"

[dependencies]
byteorder = "1.3"
clap = "3.0.0-beta.2"
dirs = "3.0"
platforms = "1.1"
rusqlite = { version = "0.24", features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
webbrowser = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.8"
