[package]
name = "bukubrow"
version = "5.4.0"
authors = ["Sam A. Horvath-Hunt"]
edition = "2021"

[[bin]]
name = "bukubrow"

[dependencies]
byteorder = "1.4"
clap = { version = "4.0", features = ["cargo"] }
dirs = "4.0"
platforms = "2.0"
rusqlite = { version = "0.28", features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
webbrowser = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
